--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -17,6 +17,9 @@
         android:name="ru.dw.composition.presentation.ChooseLevelFragment"
         android:label="fragment_choose_level"
         tools:layout="@layout/fragment_choose_level" >
+        <argument
+            android:name="level"
+            app:argType="ru.dw.composition.domain.entity.Level" />
         <action
             android:id="@+id/action_chooseLevelFragment2_to_gameFragment"
             app:destination="@id/gameFragment" />
@@ -31,10 +34,17 @@
             app:destination="@id/gameFinishedFragment"
             app:popUpTo="@id/gameFragment"
             app:popUpToInclusive="true" />
+        <argument
+            android:name="level"
+            app:argType="ru.dw.composition.domain.entity.Level" />
     </fragment>
     <fragment
         android:id="@+id/gameFinishedFragment"
         android:name="ru.dw.composition.presentation.GameFinishedFragment"
         android:label="fragment_game_finished"
-        tools:layout="@layout/fragment_game_finished" />
+        tools:layout="@layout/fragment_game_finished" >
+        <argument
+            android:name="gameResult"
+            app:argType="ru.dw.composition.domain.entity.GameResult" />
+    </fragment>
 </navigation>
